--- a/bootstrap/less/variables.less
+++ b/bootstrap/less/variables.less
@@ -1,8 +1,7 @@
 //
 // Variables
 // --------------------------------------------------
-
-
+// yey
 //== Colors
 //
 //## Gray and brand colors for use across Bootstrap.
@@ -843,5 +842,3 @@
 @dl-horizontal-offset:        @component-offset-horizontal;
 //** Horizontal line color.
 @hr-border:                   @gray-lighter;
-
-
